--- a/src/app/conversor-moeda/conversor-moeda.component.html
+++ b/src/app/conversor-moeda/conversor-moeda.component.html
@@ -1,1 +1,20 @@
-<p>conversor-moeda works!</p>
+<h3>Conversor de Moeda</h3>
+<h4>Digite um valor na Moeda Real</h4>
+<input type="float" name="moeda1" id="valor1">
+<br>
+<h4>Digite o valor da moeda a ser convertida</h4>
+<input type="float" name="moeda2" id="valor2">
+<br>
+<h4>Valor Convertido</h4>
+<input type="float" name="convertida" id="valor3">
+<br>
+<button type="button">Real para Dolar onClick="realdolar"</button>
+<br>
+<button type="button">Real para Libra onClick="reallibra"</button>
+<br>
+<button type="button">Real para Euro onClick="realeuro"</button>
+/*<input type="button" value="Converter" id="btn1" onClick="conversao()" />*/
+
+
+
+
