--- a/src/app/conversor-moeda/conversor-moeda.component.html
+++ b/src/app/conversor-moeda/conversor-moeda.component.html
@@ -1,3 +1,4 @@
+<form>
 <h3>Conversor de Moeda</h3>
 <h4>Digite um valor na Moeda Real</h4>
 <input type="float" name="moeda1" id="valor1">
@@ -5,15 +6,20 @@
 <h4>Digite o valor da moeda a ser convertida</h4>
 <input type="float" name="moeda2" id="valor2">
 <br>
-<h4>Valor Convertido</h4>
-<input type="float" name="convertida" id="valor3">
+<h4>Valor a ser convertido</h4>
+<input type="float" name="valorconverter" id="valor3">
 <br>
-<button type="button">Real para Dolar onClick="realdolar"</button>
+<h4>Valor convertido</h4>
+<input type="float" name="resultado" id="valor4">
 <br>
-<button type="button">Real para Libra onClick="reallibra"</button>
+<button type="button">Real para Dolar onClick="realdolar()"</button>
 <br>
-<button type="button">Real para Euro onClick="realeuro"</button>
-/*<input type="button" value="Converter" id="btn1" onClick="conversao()" />*/
+<button type="button">Real para Libra onClick="reallibra()"</button>
+<br>
+<button type="button">Real para Euro onClick="realeuro()"</button>
+</form>
+
+
 
 
 
