maism um commit

--- a/src/app/conversor-moeda/conversor-moeda.component.html
+++ b/src/app/conversor-moeda/conversor-moeda.component.html
@@ -12,11 +12,11 @@
 <h4>Valor convertido</h4>
 <input type="float" name="resultado" id="valor4">
 <br>
-<button type="button">Real para Dolar onClick="realdolar()"</button>
+<button type="button" class="btn btn-outline-primary" onClick="realdolar()">Real para Dolar</button>
 <br>
-<button type="button">Real para Libra onClick="reallibra()"</button>
+<button type="button" class="btn btn-outline-primary" onClick="reallibra()">Real para Libra </button>
 <br>
-<button type="button">Real para Euro onClick="realeuro()"</button>
+<button type="button" class="btn btn-outline-primary" onClick="realeuro()">Real para Euro </button>
 </form>
 
 
