--- a/src/app/conversor-moeda/conversor-moeda.component.html
+++ b/src/app/conversor-moeda/conversor-moeda.component.html
@@ -12,7 +12,7 @@
 <h4>Valor convertido</h4>
 <input type="float" name="resultado" id="valor4">
 <br>
-<button type="button" class="btn btn-outline-primary" onClick="realdolar()">Real para Dolar</button>
+<button type="button" class="btn btn-outline-primary" onClick="realdolar()">Reais para Dolar</button>
 <br>
 <button type="button" class="btn btn-outline-primary" onClick="reallibra()">Real para Libra </button>
 <br>
