--- a/src/app/conversor-moeda/conversor-moeda.component.html
+++ b/src/app/conversor-moeda/conversor-moeda.component.html
@@ -1,20 +1,20 @@
-<form>
+<form action="/action_page.php">
 <h3>Conversor de Moeda</h3>
 <h4>Digite um valor na Moeda Real</h4>
-<input type="float" name="moeda1" id="valor1">
+<input class="form-control" type="float" name="moeda1" id="valor1">
 <br>
 <h4>Digite o valor da moeda a ser convertida</h4>
-<input type="float" name="moeda2" id="valor2">
+<input  class="form-control" type="float" name="moeda2" id="valor2">
 <br>
 <h4>Valor a ser convertido</h4>
-<input type="float" name="valorconverter" id="valor3">
+<input class="form-control" type="float" name="valorconverter" id="valor3">
 <br>
 <h4>Valor convertido</h4>
-<input type="float" name="resultado" id="valor4">
+<input class="form-control" type="float" name="resultado" id="valor4">
 <br>
-<button type="button" class="btn btn-outline-primary" onClick="realdolar()">Reais para Dolar</button>
+<button ng  type="button" class="btn btn-outline-primary" onClick="realdolar()">Reais para Dolar</button>
 <br>
-<button type="button" class="btn btn-outline-primary" onClick="reallibra()">Real para Libra </button>
+<button  type="button" class="btn btn-outline-primary" onClick="reallibra()">Real para Libra </button>
 <br>
 <button type="button" class="btn btn-outline-primary" onClick="realeuro()">Real para Euro </button>
 </form>
